// ─────────────────────────────────────────────────────────────
// Aevatar Foundation - core message definitions.
// Contains semantic fields only; routing implementation details live in Core.
// ─────────────────────────────────────────────────────────────
syntax = "proto3";

package aevatar;

option csharp_namespace = "Aevatar.Foundation.Abstractions";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

// Event propagation direction.

enum EventDirection {
  EVENT_DIRECTION_UNSPECIFIED = 0;
  EVENT_DIRECTION_DOWN        = 1;   // Parent -> children
  EVENT_DIRECTION_UP          = 2;   // Child -> parent stream -> siblings
  EVENT_DIRECTION_BOTH        = 3;   // Both directions
  EVENT_DIRECTION_SELF        = 4;   // Local only
}

// Event envelope: 8 semantic fields (reduced from 16).

message EventEnvelope {
  string                      id              = 1;
  google.protobuf.Timestamp   timestamp       = 2;
  google.protobuf.Any         payload         = 3;
  string                      publisher_id    = 4;
  EventDirection              direction       = 5;
  string                      correlation_id  = 6;
  string                      target_actor_id = 7;  // Point-to-point target
  map<string, string>         metadata        = 8;  // Extensible metadata
}

// State events (Event Sourcing).

message StateEvent {
  string                      event_id   = 1;
  google.protobuf.Timestamp   timestamp  = 2;
  int64                       version    = 3;
  string                      event_type = 4;
  google.protobuf.Any         event_data = 5;
  string                      agent_id   = 6;
}

// Hierarchy change events.

message ParentChangedEvent {
  string old_parent = 1;
  string new_parent = 2;
}

message ChildAddedEvent {
  string child_id = 1;
}

message ChildRemovedEvent {
  string child_id = 1;
}
